# solhat-egui

./: Cargo.toml  README.md  dockerbuild-debian.sh  dockerbuild-fedora.sh
assets/: solhat.desktop
docker/: Dockerfile.debian  Dockerfile.fedora  config.sh
locales/: en.toml
src/: histogram.rs  imageutil.rs  main.rs  preview.rs  resultview.rs  state.rs  taskstatus.rs  toggle.rs
src/analysis/: mod.rs  sigma.rs  threshold.rs
src/cancel/: mod.rs
src/process/: mod.rs
wix/: License.rtf  main.wxs
