[package]
name = "solhat-egui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.1"
imageproc = "0.23.0"
chrono = "0.4.19"
rayon = "1.5.3"
sciimg = {git = "https://github.com/MarsRaw/sciimg.git", branch = "kmgill_develop", features = ["rayon"]}
# sciimg = {path = "../sciimg"}
stump = {git = "https://github.com/MarsRaw/stump.git"}
toml = "0.7.4"
serde = { version = "1.0.125", features = ["derive"] }
anyhow = "1.0.65"
lazy_static = "1.4.0"
serde_json = "1.0.64"
async-trait = "0.1.57"
tokio = {version="1.21.2", features= ["full"]}
itertools = "0.10.5"
egui = "0.23.0"
eframe = "0.23.0"
egui_extras = "0.23.0"
epaint = "0.22.0"
log = { version = "0.4", features = ["std"] }
env_logger = "0.10.0"
rfd = "0.11"
dirs = "5.0.0"
charts = {git = "https://github.com/kmgill/rustplotlib.git"}
solhat = {path = "../solhat"}