[package]
name = "solhat-egui"
version = "0.1.0"
edition = "2021"
license = "MIT" 
description = "Application for processing and stacking raw solar and lunar imagery"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.1"
imageproc = "0.23.0"
chrono = "0.4.19"
rayon = "1.5.3"
sciimg = {git = "https://github.com/MarsRaw/sciimg.git", branch = "kmgill_develop", features = ["rayon"]}
# sciimg = {path = "../sciimg"}
stump = {git = "https://github.com/MarsRaw/stump.git"}
toml = "0.8.2"
serde = { version = "1.0.125", features = ["derive"] }
anyhow = "1.0.65"
lazy_static = "1.4.0"
serde_json = "1.0.64"
async-trait = "0.1.57"
tokio = {version="1.21.2", features= ["full"]}
itertools = "0.11.0"
egui = "0.23.0"
eframe = "0.23.0"
egui_plot = "0.23.0"
egui_extras = {version="0.23.0", features= ["svg"]}
epaint = "0.23.0"
log = { version = "0.4", features = ["std"] }
env_logger = "0.10.0"
rfd = "0.12.0"
dirs = "5.0.0"
solhat = {git = "https://github.com/kmgill/solhat.git"}
# solhat = {path = "../solhat"}
rand = "0.8.5"


[package.metadata.deb]
maintainer = "Kevin M. Gill <apoapsys@gmail.com>"
copyright = "2023, Kevin M. Gill <apoapsys@gmail.com>"
license-file = ["LICENSE", "2"]
extended-description = "Application for processing and stacking raw solar and lunar imagery" 
depends = "$auto"
section = "science"
priority = "optional"
assets = [
    ["target/release/solhat-egui", "/usr/bin/solhat-egui", "755"],
    ["README.md", "/usr/share/doc/solhat/README", "644"],
    ["assets/hicolor/48x48/apps/solhat.png", "/usr/share/icons/hicolor/48x48/apps/solhat.png","644"],
    ["assets/hicolor/128x128/apps/solhat.png", "/usr/share/icons/hicolor/128x128/apps/solhat.png", "644"],
    ["assets/hicolor/256x256/apps/solhat.png", "/usr/share/icons/hicolor/256x256/apps/solhat.png", "644"],
    ["assets/solhat.desktop", "/usr/share/applications/solhat.desktop", "644"]
 ]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/solhat-egui", dest = "/usr/bin/solhat-egui", mode = "755"},
    { source = "README.md", dest = "/usr/share/doc/solhat/README", mode ="644"},
    { source = "assets/hicolor/48x48/apps/solhat.png", dest = "/usr/share/icons/hicolor/48x48/apps/solhat.png", mode ="644"},
    { source = "assets/hicolor/128x128/apps/solhat.png", dest = "/usr/share/icons/hicolor/128x128/apps/solhat.png", mode ="644"},
    { source = "assets/hicolor/256x256/apps/solhat.png", dest = "/usr/share/icons/hicolor/256x256/apps/solhat.png", mode ="644"},
    { source = "assets/solhat.desktop", dest = "/usr/share/applications/solhat.desktop", mode ="644"},
]